cmake_minimum_required(VERSION 3.17)
project(project_2b)
project(project_3a)
project(project_3b)
project(project_3c)
project(project_3d)
project(project_4a)
project(project_4b)
project(project_4c)
project(project_4d)
project(project_5a)
project(project_5b)
project(project_5c)
project(project_6a)
project(project_6b)
project(project_6c)
project(project_6d)
project(project_6e)
project(project_7a)
project(project_7b)
project(project_7c)
project(project_7d)
project(project_8a)
project(project_9a)
project(project_9b)
project(project_9c)
project(project_9d)
project(project_10a)
project(project_10b)
project(project_10c)
project(project_12a)
project(project_12b)

set(CMAKE_CXX_STANDARD 17)

add_executable(project_2b hw2_task_B_counting_sort.cpp)
add_executable(project_3a hw3_task_A_approx_binary_search.cpp)
add_executable(project_3b hw3_task_B_binary_search_in_array.cpp)
add_executable(project_3c hw3_task_C_bin_search_math.cpp)
add_executable(project_3d hw3_task_D_bin_search_ropes.cpp)
add_executable(project_4a hw4_task_A_stack_min_with_linked_list.cpp)
add_executable(project_4b hw4_task_B_stack_with_array_postfix_notation.cpp)
add_executable(project_4c hw4_task_C_queue.cpp)
add_executable(project_4d hw4_task_D_heap.cpp)
add_executable(project_5a hw5_task_A_set.cpp)
add_executable(project_5b hw5_task_B_map.cpp)
add_executable(project_5c hw5_task_C_linked_map.cpp)
add_executable(project_6a hw6_task_A_dynamic_prog_grasshopper.cpp)
add_executable(project_6b hw6_task_B_dynamic_prog_turtle.cpp)
add_executable(project_6c hw6_task_C_dynamic_prog_sequence.cpp)
add_executable(project_6d hw6_task_D_dynamic_prog_mutual_seq.cpp)
add_executable(project_6e hw6_task_E_dynamic_prog_cafe.cpp)
add_executable(project_7a hw7_task_A_rsq.cpp)
add_executable(project_7b hw7_task_B_sparce_tables.cpp)
add_executable(project_7c hw7_task_C_fenwick_tree.cpp)
add_executable(project_7d hw7_task_D_segment_tree.cpp)
add_executable(project_8a hw8_task_A_binary_search_tree.cpp)
add_executable(project_9a hw9_task_A_treap.cpp)
add_executable(project_9b hw9_task_B_treap_implicit_key.cpp)
add_executable(project_9c hw9_task_C_move_to_begin_treap.cpp)
add_executable(project_9d hw9_task_D_reverse_treap.cpp)
add_executable(project_10a hw10_task_A_graphs_connected_components.cpp)
add_executable(project_10b hw10_task_B_praphs_dfs.cpp)
add_executable(project_10c hw10_task_C_graphs_topological_sort.cpp)
add_executable(project_12a hw12_task_A_graphs_disjoint_sets.cpp)
